Version 0.75
------------------------------------------------------------------------------
  * added is.jaeum, is.moeum functions.


Version 0.73
------------------------------------------------------------------------------
  * add messages on is.hangul and is.jamo if input is not UTF-8.
  * set -Xmx512m when the time user system is poor on memory. 
  * fix issue "Continuous "[:space:]" in sentence can make infinite wait."


Version 0.7
------------------------------------------------------------------------------
  * new dictionary added which from Sejong projects
  * added example 
  * Set "dontrun" on example code because Windows encoding problems.
  * Warning message may appear if system doesn't have Hangul encoding ability(no warning on UTF-8).


Version 0.0-9.3
------------------------------------------------------------------------------
  * added user dictionary manage functions.
  * to -Xmx1024m for big dictionary size
  * supports JRE 1.5



Version 0.0-9.2 
------------------------------------------------------------------------------
  * add is.jamo() and fix is.hangul()  
  * add tag name converter for future use
  * add edit distance cost table for Hangul for future use
  * fix documentation 

Version 0.0-9.0 (2012-01-03)
------------------------------------------------------------------------------
  * fixing bug on HangulAutomata function 
  * added more test case


Version 0.0-8.3 (2011-12-23)
------------------------------------------------------------------------------
  * added input string encoding detection function(can only detect UTF-8,16,32)
  * added Hangul automata logic, now can convert jamo sequences to Hangul syllable.
  * added user dic reloading function(for future use) 



Version 0.0-8.1 (2011-12-19)
------------------------------------------------------------------------------
  * full support Jamo and keystrokes converting
  * add link to github wiki for examples using Hangul




Version 0.0-8.0 (2011-12-09)