@@ -15,5 +15,4 @@ export(reloadAllDic)
 export(restoreUsrDic)
 export(SimplePos09)
 export(SimplePos22)
-import("bitops")
 import("rJava")
