@@ -1,0 +1,35 @@
+# Data Description File for roxygen2
+
+#' Keystroke misspell cost table
+#'
+#' @name editweights
+#' @docType data
+#' @author Heewon Jeon \email{madjakarta@@gmail..com}
+NULL
+
+
+#' KAIST tag to Sejong tag
+#'
+#' @name KtoS
+#' @docType data
+#' @author Heewon Jeon \email{madjakarta@@gmail..com}
+NULL
+
+
+#' Sejong tag to KAIST tag
+#'
+#' @name StoK
+#' @docType data
+#' @author Heewon Jeon \email{madjakarta@@gmail..com}
+NULL
+
+
+
+
+#' tag names
+#'
+#' @name tags
+#' @docType data
+#' @author Heewon Jeon \email{madjakarta@@gmail..com}
+NULL
+
