@@ -1,0 +1,12 @@
+\docType{data}
+\name{KtoS}
+\alias{KtoS}
+\title{KAIST tag to Sejong tag}
+\description{
+  KAIST tag to Sejong tag
+}
+\author{
+  Heewon Jeon \email{madjakarta@gmail..com}
+}
+\keyword{datasets}
+
