@@ -1,0 +1,12 @@
+\docType{data}
+\name{StoK}
+\alias{StoK}
+\title{Sejong tag to KAIST tag}
+\description{
+  Sejong tag to KAIST tag
+}
+\author{
+  Heewon Jeon \email{madjakarta@gmail..com}
+}
+\keyword{datasets}
+
