@@ -1,17 +1,0 @@
-\name{detectInputEncoding}
-\alias{detectInputEncoding}
-\title{Rough encoding detection function}
-\usage{
-  detectInputEncoding(charinput)
-}
-\arguments{
-  \item{charinput}{charactor vector}
-}
-\value{
-  encoding names of rawinpus.
-}
-\description{
-  function to be used for file or raw vector encoding
-  detection. This is for internal use.
-}
-
