@@ -1,0 +1,12 @@
+\docType{data}
+\name{editweights}
+\alias{editweights}
+\title{Keystroke misspell cost table}
+\description{
+  Keystroke misspell cost table
+}
+\author{
+  Heewon Jeon \email{madjakarta@gmail..com}
+}
+\keyword{datasets}
+
