@@ -1,17 +1,0 @@
-\name{is.utf8}
-\alias{is.utf8}
-\title{Rough UTF-8 checking function.}
-\usage{
-  is.utf8(sentenceU8)
-}
-\arguments{
-  \item{sentenceU8}{charactor vector}
-}
-\value{
-  TRUE or FALSE
-}
-\description{
-  function to be used for charactor vector encoding
-  detection. This is for internal use.
-}
-
