@@ -1,0 +1,12 @@
+\docType{data}
+\name{tags}
+\alias{tags}
+\title{tag names}
+\description{
+  tag names
+}
+\author{
+  Heewon Jeon \email{madjakarta@gmail..com}
+}
+\keyword{datasets}
+
